Rectangles can be merge in editing view

--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
                             </div>
                         </div>
                         <div class="panel panel-default">
-                            <div class="panel-heading">Selection</div>
+                            <div class="panel-heading">Rectangles selection</div>
                             <div class="panel-body">
                                 <form id="selectionForm">
                                     <fieldset disabled>
                                         <div class="form-group merge-overlapping">
-                                            <button type="button" class="btn btn-default btn-sm">Merge with overlapping sprites</button>
+                                            <button type="button" class="btn btn-default btn-sm">Select overlapping rectangle</button>
                                         </div>
-                                        <div class="form-group merge-selected hide">
-                                            <button type="button" class="btn btn-default btn-sm">Merge selected sprites</button>
+                                        <div class="form-group merge-selected">
+                                            <button type="button" class="btn btn-default btn-sm">Merge selected rectangle</button>
                                         </div>
                                     </fieldset>
                                 </form>
